@@ -1,3 +1,8 @@
+2009-03-16  Curtis Gedak  <gedakc@gmail.com>
+
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: Improved swap and dmraid mountpoint detection.
+
 2009-03-14  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/GParted_Core.cc: Added initial support for dmraid devices.
